--- a/index.html
+++ b/index.html
@@ -6224,10 +6224,11 @@ Varianz des Intercept = 0.</p>
 Correlation bestimmt werden. Sie macht den Anteil der Intercept Varianz
 an der Gesamt varianz aus</p>
 <p><span class="math display">\[ICC(1) =
-\rho=\frac{\sigma_{u_{0}}^{2}}{\sigma_{u_{0}}^{2}+\sigma_{e}^{2}}\]</span>
-Wobei <span class="math inline">\(\sigma_{u_{0}}^{2}\)</span> und <span class="math inline">\(\sigma_{e}^{2}\)</span> die Residuen auf Ebene 1
-bzw. Ebene 2 des Interecept Only Models darstellen, in denen jeweils i
-und j die Indices für Mirco- und Marcoeinheiten darstellen. <span class="math display">\[Y_{i j}=\beta_{0 j}+e_{i j}\]</span> <span class="math display">\[\beta_{0 j}=\gamma_{00}+u_{0 j}\]</span> <span class="math display">\[Y_{i j}=\gamma_{00}+u_{0 j}+e_{i j}\]</span></p>
+\rho=\frac{\sigma^{2}_{\alpha_{j}}}{\sigma_{\alpha_{j}}^{2}+\sigma^{2}}\]</span>
+Wobei <span class="math inline">\(\sigma^{2}_{\alpha_{j}}\)</span> und
+<span class="math inline">\(\sigma^{2}\)</span> die Residuen auf Ebene 1
+bzw. Ebene 2 des Intercept Only Models darstellen, in denen jeweils i
+und j die Indices für Micro- und Marcoeinheiten darstellen.</p>
 </div>
 <div id="fixed-effects-vs-random-effects" class="section level3">
 <h3>Fixed Effects vs Random Effects</h3>
